# india_climate

./: .gitignore  ClimateAggregator.py  GeoFormatConverter.py  GeoHierarchyConverter.py  README.md  add_geo.ipynb  aggregate data.ipynb  basic_plots.ipynb  clean.ipynb  climate_aggregator example.ipynb  climate_aggregator.ipynb  climate_data.ipynb  climate_data_download.py  compare_duckdb_vs_geopandas.py  convert geodata.ipynb  geoboundries.ipynb  old_add_geo.ipynb  pipeline.ipynb  pyproject.toml  update_climate.ipynb
input/: geoBoundaries-ARG-ADM0-all.zip:Zone.Identifier  geoBoundaries-ARG-ADM1-all.zip:Zone.Identifier  geoBoundaries-ARG-ADM2-all.zip:Zone.Identifier
